conf-loader:updated legio2packagejson: wip